syntax = "proto3";

package movies;

service Movies {
  rpc SearchMovie (SearchRequest) returns (SearchResponse);
}

message NoResponse {
}

message SearchRequest {
  string query = 1;
  int64 page = 2;
}

message SearchResponse{
  repeated Movie movies = 1;
  int64 total_result = 2;
  int64 page = 3;
  int64 result = 4;
}

message Movie{
  string title = 1;
  string year = 2;
  string imdb_id = 3;
  string type = 4;
  string poster = 5;
}
